fix overflow issue on mobile

--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -19,6 +19,7 @@ body {
 main {
   width: 87.5%;
   height: auto;
+  overflow: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
